# tillers

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TESTING_REPORT.md  WARNING.md  build.rs  clippy.toml  rustfmt.toml
.claude/: settings.local.json
.gemini/commands/: constitution.toml  implement.toml  plan.toml  specify.toml  tasks.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
benches/: window_positioning.rs  workspace_switching.rs
docs/: installation.md  rustdoc.md
resources/: Info.plist  entitlements.plist
scripts/: create_cask_release.sh  package_app.sh
specs/001-build-an-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  parser.rs  persistence.rs  simple_persistence.rs  validator.rs
src/error_recovery/: mod.rs
src/lifecycle/: mod.rs
src/logging/: mod.rs
src/macos/: accessibility.rs  core_graphics.rs  mod.rs  objc_bridge.rs  permissions.rs
src/models/: application_profile.rs  keyboard_mapping.rs  mod.rs  monitor_configuration.rs  tiling_pattern.rs  window_rule.rs  workspace.rs
src/permissions/: mod.rs
src/services/: keyboard_handler.rs  mod.rs  tiling_engine.rs  window_manager.rs  workspace_manager.rs  workspace_orchestrator.rs
src/ui/: mod.rs  system_tray.rs
tests/: integration_tests.rs
tests/contract/: test_keyboard_handler.rs  test_window_manager.rs  test_workspace_manager.rs
tests/performance/: test_memory.rs
tests/unit/: test_config_parser.rs  test_tiling_algorithms.rs
(+5 files in other folders)
